hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: hello-world
  template:
    metadata: 
      labels: 
        app: hello-world
    spec:
      containers: 
      - image: learnistio/helloworld:1.0.0
        imagePullPolicy: IfNotPresent
        name: hello-world
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: hello-world
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hello-world.k8s.titanstate.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
  - "hello-world.k8s.titanstate.com"
  gateways:
  - hello-world-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: hello-world.default.svc.cluster.local
        port:
          number: 3000
